# CMakeTemplate

./: CMakeLists.txt  README.md
lib/include/: LibraryFile.h
lib/src/: CMakeLists.txt  LibraryFile.cpp
mainProject/include/: Include.h
mainProject/src/: CMakeLists.txt  Include.cpp  main.cpp  version_config.h.in
proto/: CMakeLists.txt  example.proto
test/: CMakeLists.txt  test1.cpp
